Zrobiony jest pierwszy punkt 11 zadania

--- a/First_project/View/src/main/resources/Languages_PL.properties
+++ b/First_project/View/src/main/resources/Languages_PL.properties
@@ -9,3 +9,4 @@ buttonFile = Zapisać do pliku
 niepoprawnaPlansza = Plansza zawiera błędy
 win = Wygrałeś, gratulacja!
 lose = Nie wszystkie liczby rozstawione poprawnie
+buttonRead = Odczytać z pliku
