--- a/First_project/View/src/main/resources/Languages_RU.properties
+++ b/First_project/View/src/main/resources/Languages_RU.properties
@@ -9,3 +9,4 @@ buttonFile = Записать в файл
 niepoprawnaPlansza = Поле содержит ошибки
 win = Поздравляю, вы выиграли!
 lose = Не все числа расставлены правильно
+buttonRead = Прочитать файл
